--- a/src/locale/zh_TW/LC_MESSAGES/messages.po
+++ b/src/locale/zh_TW/LC_MESSAGES/messages.po
@@ -443,14 +443,6 @@ msgstr "性別"
 msgid "Donation Envelope"
 msgstr "捐款信封"
 
-#: CSVImport.php:228
-msgid "Address1"
-msgstr "地址"
-
-#: CSVImport.php:229
-msgid "Address2"
-msgstr "地址"
-
 #: CSVImport.php:234 EditEventAttendees.php:54 EventAttendance.php:204
 #: GroupMemberList.php:323 GroupReports.php:159 SelectList.php:1160
 #: SelectListFormatted.php:1208
@@ -652,10 +644,6 @@ msgstr "啟動招商，讓所有家庭"
 
 #: CanvassAutomation.php:206
 msgid "Turn on the &quot;Ok To Canvass&quot; field for all Families."
-msgstr ""
-
-#: CanvassAutomation.php:206 CanvassAutomation.php:217
-msgid "Important note: this will lose any &quot;Ok To Canvass&quot; fields that have been set by hand."
 msgstr ""
 
 #: CanvassAutomation.php:170
@@ -970,14 +958,6 @@ msgstr "您的購物車中包含"
 msgid "persons from"
 msgstr "人從"
 
-#: CartView.php:185
-msgid "families."
-msgstr "家庭。"
-
-#: CartView.php:191
-msgid "Email?"
-msgstr "電子郵件？"
-
 #: CartView.php:192 CartView.php:243 FamilyView.php:467 FamilyView.php:516
 #: GroupView.php:251 GroupView.php:299 PersonView.php:521 PersonView.php:568
 #: PersonView.php:641 PersonView.php:667 PersonView.php:758 PersonView.php:774
@@ -1098,10 +1078,6 @@ msgstr "簽出"
 #: EventNames.php:197 ListEvents.php:228
 msgid "Action"
 msgstr "行動"
-
-#: Checkin.php:441
-msgid "Checkout"
-msgstr "結帳"
 
 #: Checkin.php:450 EditEventAttendees.php:97
 msgid "No Attendees Assigned to Event"
@@ -1390,20 +1366,6 @@ msgstr "目前沒有資金已"
 #: MenuSetup.php:79
 msgid "Active"
 msgstr "活躍"
-
-#: AddEvent.php:220 AddEvent.php:227 DonationFundEditor.php:218
-#: DonationFundEditor.php:259 FamilyCustomFieldsEditor.php:388
-#: FamilyCustomFieldsEditorSave.php:384 GroupEditor.php:249
-#: GroupPropsFormEditor.php:344 GroupPropsFormEditor.php:426
-#: OptionManager.php:367 OptionManagerSave.php:364
-#: PersonCustomFieldsEditor.php:368 VolunteerOpportunityEditor.php:382
-#: VolunteerOpportunityEditor.php:423
-msgid "You must enter a name."
-msgstr "您必須輸入一個名稱。"
-
-#: DonationFundEditor.php:211
-msgid "delete"
-msgstr "刪除"
 
 #: DonationFundEditor.php:188 DonationFundEditor.php:239 EventEditor.php:534
 #: EventNames.php:69 EventNames.php:269 FamilyCustomFieldsEditor.php:347
@@ -1893,10 +1855,6 @@ msgstr "無效的年份：允許值是1901到2155"
 #: FamilyEditor.php:223 PersonEditor.php:196
 msgid "Invalid Birth Date."
 msgstr "無效的出生日期。"
-
-#: FamilyEditor.php:233
-msgid "You must enter a Name."
-msgstr "您必須輸入一個名稱。"
 
 #: FamilyEditor.php:243
 msgid "Not a valid Wedding Date"
@@ -2495,10 +2453,6 @@ msgstr "存款單"
 msgid "Deposit Report"
 msgstr "存款報告"
 
-#: FinancialReports.php:300
-msgid "PDF"
-msgstr "PDF"
-
 #: FinancialReports.php:301
 msgid "CSV"
 msgstr "CSV"
@@ -2585,18 +2539,9 @@ msgstr "顯示方式："
 msgid "Number"
 msgstr "數"
 
-#: FundRaiserEditor.php:33
-msgid "Fund Raiser #"
-msgstr "籌款獎＃"
-
 #: FundRaiserEditor.php:35
 msgid "Create New Fund Raiser"
 msgstr "創建新的籌款獎"
-
-#: DepositSlipEditor.php:78 FundRaiserEditor.php:57 GroupMeeting.php:45
-#: PledgeEditor.php:333
-msgid "Not a valid Date"
-msgstr "不是有效的日期"
 
 #: FundRaiserEditor.php:160
 msgid "Add Donated Item"
@@ -2630,10 +2575,6 @@ msgstr "買方"
 #: FundRaiserEditor.php:205
 msgid "Sale Price"
 msgstr "銷售價格"
-
-#: FundRaiserEditor.php:206
-msgid "Est Value"
-msgstr "預計值"
 
 #: FundRaiserEditor.php:207
 msgid "Material Value"
@@ -2872,10 +2813,6 @@ msgstr "數據成員"
 msgid "Group-Specific Properties Form Editor:"
 msgstr "組特定的屬性表編輯器："
 
-#: GroupPropsFormEditor.php:187
-msgid "'Default Option'"
-msgstr "“默認選項”"
-
 #: GroupPropsFormEditor.php:284
 msgid "No properties have been added yet"
 msgstr "尚未添加任何屬性"
@@ -2931,11 +2868,6 @@ msgstr "選擇你想要的信息，包括"
 #, fuzzy
 msgid "Standard Info"
 msgstr "標準信息"
-
-#: GroupReports.php:161 SelectList.php:1162 SelectListFormatted.php:1214
-#: Reports/CanvassReports.php:262
-msgid "Cell Phone"
-msgstr "手機"
 
 #: GroupReports.php:163 Reports/GroupReport.php:280
 msgid "Other Email"
@@ -3133,7 +3065,8 @@ msgid "No Attendance Recorded"
 msgstr "沒有考勤記錄的"
 
 #: ListEvents.php:299
-msgid "Attendees("
+#, fuzzy
+msgid "Attendees"
 msgstr "出席者（"
 
 #: ListEvents.php:329
@@ -3147,10 +3080,6 @@ msgstr "無效的登錄名或密碼"
 #: Login.php:153
 msgid "Too many failed logins: your account has been locked.  Please contact an administrator."
 msgstr "太多次失敗登錄您的帳戶已被鎖定。請與管理員聯繫。"
-
-#: Login.php:276
-msgid "ChurchCRM - Login"
-msgstr ""
 
 #: Login.php:393
 msgid "Please Login"
@@ -3183,10 +3112,6 @@ msgstr ""
 #: ManageEnvelopes.php:118
 msgid "Confirm"
 msgstr "確認"
-
-#: ManageEnvelopes.php:141
-msgid "All"
-msgstr "所有"
 
 #: ManageEnvelopes.php:150
 msgid "Sort by"
@@ -3354,10 +3279,6 @@ msgstr ""
 msgid "Girls"
 msgstr ""
 
-#: Menu.php:56
-msgid "Welcome to <b>Church</b>CRM"
-msgstr ""
-
 #: sundayschool/SundaySchoolDashboard.php:132 Menu.php:108
 msgid "Sunday School Classes"
 msgstr ""
@@ -3503,10 +3424,6 @@ msgstr "出口"
 #: MenuManager.php:266 OptionManager.php:389 OptionManagerSave.php:386
 msgid "Add New"
 msgstr "添加新"
-
-#: OptionManager.php:395 OptionManagerSave.php:392
-msgid "Error: You must enter a name."
-msgstr "錯誤：您必須輸入一個名稱。"
 
 #: OptionManager.php:397 OptionManagerSave.php:394
 msgid "Error: A "
@@ -3816,25 +3733,9 @@ msgstr "其他"
 msgid "Payment by"
 msgstr "付款"
 
-#: PledgeEditor.php:597
-msgid "CHECK"
-msgstr "檢查"
-
-#: PledgeEditor.php:598
-msgid "CASH"
-msgstr "現金"
-
 #: PledgeEditor.php:624
 msgid "Split"
 msgstr "分裂"
-
-#: DepositSlipEditor.php:577 PledgeEditor.php:668
-msgid "Check #"
-msgstr "檢查＃"
-
-#: PledgeEditor.php:685
-msgid "Total $"
-msgstr "總計$"
 
 #: PledgeEditor.php:691
 msgid "Split to Funds by pledge"
@@ -3948,12 +3849,9 @@ msgstr "否，取消此刪除"
 msgid "Property Editor"
 msgstr "屬性編輯器"
 
-#: PropertyEditor.php:75
-msgid "You must enter a Name"
-msgstr "您必須輸入一個名稱"
-
 #: PropertyEditor.php:82
-msgid "You must select a Type"
+#, fuzzy
+msgid "You must select a type"
 msgstr "您必須選擇一個類型"
 
 #: PropertyEditor.php:147
@@ -3963,10 +3861,6 @@ msgstr "選擇項目類型"
 #: PropertyEditor.php:170 PropertyList.php:63
 msgid "A"
 msgstr "一"
-
-#: PropertyEditor.php:170
-msgid "with this property.."
-msgstr "與此屬性.."
 
 #: PropertyEditor.php:178
 msgid "Entering a Prompt value will allow the association of a free-form value."
@@ -3983,10 +3877,6 @@ msgstr "添加新"
 #: GroupMemberList.php:410 PersonView.php:693 PropertyList.php:56
 msgid "Property"
 msgstr "財產"
-
-#: PropertyList.php:63
-msgid "with this Property..."
-msgstr "物業..."
 
 #: PropertyList.php:64
 msgid "Prompt"
@@ -4248,10 +4138,6 @@ msgstr "刪除家庭只記錄"
 msgid "Delete Family Record AND Family Members"
 msgstr "刪除家庭記錄及家庭成員的"
 
-#: SelectDelete.php:389
-msgid "No, cancel this deletion</a>"
-msgstr "否，取消此刪除"
-
 #: SelectList.php:149 SelectListFormatted.php:145
 msgid "Person Listing"
 msgstr "人上市"
@@ -4347,10 +4233,6 @@ msgstr "大車"
 msgid "Print"
 msgstr ""
 
-#: SelectList.php:1085 SelectListFormatted.php:1128
-msgid "unassigned"
-msgstr "未分配"
-
 #: SettingsIndividual.php:93
 msgid "My User Settings"
 msgstr "我的用戶設置"
@@ -4431,16 +4313,6 @@ msgstr "日曆年份"
 #: USISTAddressVerification.php:276
 msgid "US Address Verification"
 msgstr "美國地址驗證"
-
-#: USISTAddressVerification.php:310 USISTAddressVerification.php:327
-#: USISTAddressVerification.php:351 USISTAddressVerification.php:593
-#: USISTAddressVerification.php:605
-msgid "https://www.intelligentsearch.com/Hosted/User/"
-msgstr "https://www.intelligentsearch.com/Hosted/User/"
-
-#: USISTAddressVerification.php:339
-msgid "http://www.intelligentsearch.com/address_verification/verify_address.html"
-msgstr "http://www.intelligentsearch.com/address_verification/verify_address.html"
 
 #: UpdateAllLatLon.php:30
 msgid "Update Latitude & Longitude"
@@ -4670,10 +4542,6 @@ msgstr "否，取消此操作"
 #: VolunteerOpportunityEditor.php:78
 msgid "Volunteer Opportunity Delete Confirmation"
 msgstr "義工機會刪除確認"
-
-#: VolunteerOpportunityEditor.php:101
-msgid "Warning!"
-msgstr "警告！"
 
 #: VolunteerOpportunityEditor.php:102
 msgid "There are people assigned to this Volunteer Opportunity."
@@ -5163,10 +5031,6 @@ msgstr "發送通訊"
 msgid "Anniversary Date"
 msgstr "週年日"
 
-#: Reports/ConfirmReport.php:147
-msgid "Family E-Mail"
-msgstr "家庭電子郵件"
-
 #: Reports/ConfirmReport.php:170 Reports/ConfirmReport.php:189
 msgid "Member Name"
 msgstr "會員名稱"
@@ -5176,7 +5040,8 @@ msgid "Adult/Child"
 msgstr "成人/兒童"
 
 #: Reports/ConfirmReport.php:175 Reports/ConfirmReport.php:194
-msgid "Cell phone"
+#, fuzzy
+msgid "Cell Phone"
 msgstr "手機"
 
 #: Reports/ConfirmReport.php:176 Reports/ConfirmReport.php:195
@@ -5309,10 +5174,6 @@ msgstr "禮品金額："
 #: Reports/TaxReport.php:271
 msgid "Gift Designation:"
 msgstr "商品名稱："
-
-#: Reports/VotingMembers.php:53
-msgid "Voting members "
-msgstr "投票權的成員"
 
 #: sundayschool/SundaySchoolClassView.php:36
 msgid "Sunday School"
@@ -5797,10 +5658,6 @@ msgstr ""
 msgid "Extract the upgrade archive, and apply the new files"
 msgstr ""
 
-#: UpgradeCRM.php:56
-msgid "File Name:"
-msgstr ""
-
 #: UpgradeCRM.php:57
 msgid "Full Path:"
 msgstr ""
@@ -5855,10 +5712,6 @@ msgstr ""
 
 #: email/Dashboard.php:68
 msgid "Cleaned count since last send:"
-msgstr ""
-
-#: email/Dashboard.php:80
-msgid "MailChimp"
 msgstr ""
 
 #: email/Dashboard.php:84
@@ -6564,27 +6417,7 @@ msgstr ""
 
 #: 
 msgctxt "menuconfig_mcf"
-msgid "Members"
-msgstr ""
-
-#: 
-msgctxt "menuconfig_mcf"
-msgid "View All Persons"
-msgstr ""
-
-#: 
-msgctxt "menuconfig_mcf"
-msgid "View All Families"
-msgstr ""
-
-#: 
-msgctxt "menuconfig_mcf"
 msgid "Groups"
-msgstr ""
-
-#: 
-msgctxt "menuconfig_mcf"
-msgid "Group Assignment Helper"
 msgstr ""
 
 #: 
@@ -6595,11 +6428,6 @@ msgstr ""
 #: 
 msgctxt "menuconfig_mcf"
 msgid "List Event Types"
-msgstr ""
-
-#: 
-msgctxt "menuconfig_mcf"
-msgid "Deposit"
 msgstr ""
 
 #: 
@@ -6615,11 +6443,6 @@ msgstr ""
 #: 
 msgctxt "menuconfig_mcf"
 msgid "Edit Deposit Slip"
-msgstr ""
-
-#: 
-msgctxt "menuconfig_mcf"
-msgid "Fundraiser"
 msgstr ""
 
 #: 
@@ -6664,52 +6487,12 @@ msgstr ""
 
 #: 
 msgctxt "menuconfig_mcf"
-msgid "System Users"
-msgstr ""
-
-#: 
-msgctxt "menuconfig_mcf"
 msgid "Edit Custom Family Fields"
 msgstr ""
 
 #: 
 msgctxt "menuconfig_mcf"
 msgid "Edit Custom Person Fields"
-msgstr ""
-
-#: 
-msgctxt "menuconfig_mcf"
-msgid "Restore Database"
-msgstr ""
-
-#: 
-msgctxt "menuconfig_mcf"
-msgid "Generate Seed Data"
-msgstr ""
-
-#: 
-msgctxt "queryparameteroptions_qpo"
-msgid "Male"
-msgstr ""
-
-#: 
-msgctxt "queryparameteroptions_qpo"
-msgid "Female"
-msgstr ""
-
-#: 
-msgctxt "queryparameteroptions_qpo"
-msgid "Zip Code"
-msgstr ""
-
-#: 
-msgctxt "queryparameteroptions_qpo"
-msgid "WorkEmail"
-msgstr ""
-
-#: 
-msgctxt "queryparameteroptions_qpo"
-msgid "Member"
 msgstr ""
 
 #: 
@@ -6730,11 +6513,6 @@ msgstr ""
 #: 
 msgctxt "queryparameteroptions_qpo"
 msgid "Non-Attender (staff)"
-msgstr ""
-
-#: 
-msgctxt "queryparameters_qrp"
-msgid "Registered students"
 msgstr ""
 
 #: 
@@ -6765,16 +6543,6 @@ msgstr ""
 #: 
 msgctxt "queryparameters_qrp"
 msgid "Field"
-msgstr ""
-
-#: 
-msgctxt "queryparameters_qrp"
-msgid "Month"
-msgstr ""
-
-#: 
-msgctxt "queryparameters_qrp"
-msgid "Volunteer opportunities"
 msgstr ""
 
 #: 
@@ -6979,10 +6747,6 @@ msgstr ""
 msgid "support docs."
 msgstr ""
 
-#: MenuSetup.php:81
-msgid "Inactive"
-msgstr ""
-
 #: EventNames.php:210
 msgid "Yearly"
 msgstr ""
@@ -7065,10 +6829,6 @@ msgstr ""
 
 #: Register.php:32
 msgid "Admin->Edit General Settings"
-msgstr ""
-
-#: Register.php:53
-msgid "ChurchCRM URL"
 msgstr ""
 
 #: Register.php:54
@@ -7173,18 +6933,6 @@ msgstr ""
 msgid "Fiscal Year:"
 msgstr ""
 
-#: AutoPaymentEditor.php:362
-msgid "First name"
-msgstr ""
-
-#: AutoPaymentEditor.php:367
-msgid "Last name"
-msgstr ""
-
-#: AutoPaymentEditor.php:392
-msgid "Zip code"
-msgstr ""
-
 #: BackupDatabase.php:50
 msgid "Password values entered were not the same! Please re-type them."
 msgstr ""
@@ -7193,16 +6941,8 @@ msgstr ""
 msgid "You must enter a password of at least 8 characters to encrypt this backup."
 msgstr ""
 
-#: BackupDatabase.php:120
-msgid "This tool will assist you in manually backing up the InfoCentral database."
-msgstr ""
-
 #: BackupDatabase.php:122
 msgid "TIPS:"
-msgstr ""
-
-#: BackupDatabase.php:126
-msgid "If you are concerned about confidentiality of data stored in the InfoCentral database, you should encrypt the backup data if it will be stored somewhere potentially accessible to others"
 msgstr ""
 
 #: BackupDatabase.php:131
@@ -7224,16 +6964,6 @@ msgstr ""
 #: CanvassAutomation.php:150
 msgid "Clear all the canvasser assignments for all families.  <p>Important\n"
 "\t\t\tnote: this will lose any canvasser assignments that have been made by hand.</p>"
-msgstr ""
-
-#: CanvassAutomation.php:162
-msgid "Turn on the &quot;Ok To Canvass&quot; field for all Families.  <p>Important\n"
-"\t\t\tnote: this will lose any &quot;Ok To Canvass&quot; fields that have been set by hand.</p>"
-msgstr ""
-
-#: CanvassAutomation.php:174
-msgid "Turn off the &quot;Ok To Canvass&quot; field for all Families.  <p>Important\n"
-"\t\t\tnote: this will lose any &quot;Ok To Canvass&quot; fields that have been set by hand.</p>"
 msgstr ""
 
 #: CanvassEditor.php:162 UserEditor.php:424
@@ -7273,11 +7003,6 @@ msgstr ""
 
 #: CartToFamily.php:269 FamilyEditor.php:720
 msgid "Postal Code:"
-msgstr ""
-
-#: CartToFamily.php:271 CSVExport.php:129 FamilyEditor.php:722
-#: PersonEditor.php:688
-msgid "Zip:"
 msgstr ""
 
 #: CartToFamily.php:281 CSVExport.php:139 FamilyEditor.php:739
@@ -7500,10 +7225,6 @@ msgstr ""
 msgid "Final Price:"
 msgstr ""
 
-#: DonationFundEditor.php:176
-msgid "Warning: Field changes will be lost if you do not Save Changes before using a delete or add new button!"
-msgstr ""
-
 #: DonationFundEditor.php:257 FamilyCustomFieldsEditor.php:473
 #: FamilyCustomFieldsEditorSave.php:469 GroupEditor.php:247
 #: GroupPropsFormEditor.php:423 MenuManager.php:261 OptionManager.php:384
@@ -7523,14 +7244,6 @@ msgstr ""
 msgid "Are you sure you want to delete this event?"
 msgstr ""
 
-#: EditEventTypes.php:192
-msgid "DELETE"
-msgstr ""
-
-#: EditEventTypes.php:208
-msgid "ADD"
-msgstr ""
-
 #: eGive.php:295
 msgid "Start Date: "
 msgstr ""
@@ -7539,28 +7252,12 @@ msgstr ""
 msgid "End Date: "
 msgstr ""
 
-#: EventAttendance.php:70
-msgid " Events"
-msgstr ""
-
 #: EventEditor.php:59 EventNames.php:283
 msgid "Create=>Event"
 msgstr ""
 
 #: EventEditor.php:400
 msgid "Editing Event ID: (ID will be created once saved)"
-msgstr ""
-
-#: EventNames.php:258
-msgid "DEFAULT"
-msgstr ""
-
-#: EventNames.php:258
-msgid "START TIME"
-msgstr ""
-
-#: EventNames.php:266
-msgid "Total,"
 msgstr ""
 
 #: EventNames.php:266
@@ -7584,10 +7281,6 @@ msgstr ""
 #: FamilyCustomFieldsEditor.php:486 FamilyCustomFieldsEditorSave.php:482
 #: PersonCustomFieldsEditor.php:465
 msgid "Side:"
-msgstr ""
-
-#: FamilyEditor.php:779
-msgid "Send Newsletter:"
 msgstr ""
 
 #: FamilyEditor.php:785
@@ -7642,20 +7335,12 @@ msgstr ""
 msgid "General Information:"
 msgstr ""
 
-#: FamilyView.php:402
-msgid "Send newsletter:"
-msgstr ""
-
 #: FamilyView.php:443 GroupView.php:228 PersonView.php:498 PrintView.php:411
 msgid "Assigned Properties:"
 msgstr ""
 
 #: FamilyView.php:535 GroupView.php:321 PersonView.php:585
 msgid "Assign a New Property:"
-msgstr ""
-
-#: FamilyView.php:577 PersonView.php:853
-msgid "Last edited:"
 msgstr ""
 
 #: FamilyView.php:582 PrintView.php:291 SelectDelete.php:378
@@ -7684,10 +7369,6 @@ msgstr ""
 
 #: FinancialReports.php:132
 msgid "Filter by Family:"
-msgstr ""
-
-#: FinancialReports.php:285
-msgid "Voting members must have made a donation within this many years to not require a donation):"
 msgstr ""
 
 #: FindDepositSlip.php:79 FindFundRaiser.php:71 PaddleNumEditor.php:177
@@ -7744,10 +7425,6 @@ msgstr ""
 
 #: GroupEditor.php:286
 msgid "from group:"
-msgstr ""
-
-#: GroupEditor.php:303
-msgid "Group-Specific<br>Properties:"
 msgstr ""
 
 #: GroupEditor.php:305
@@ -7814,18 +7491,6 @@ msgstr ""
 msgid "Group Role"
 msgstr ""
 
-#: GroupMemberList.php:322
-msgid "ZIP"
-msgstr ""
-
-#: GroupMemberList.php:324
-msgid "E-mail"
-msgstr ""
-
-#: GroupPropsFormEditor.php:293
-msgid "Warning: Field changes will be lost if you do not Save Changes before using an up, down, delete, or add new button!"
-msgstr ""
-
 #: GroupReports.php:92
 msgid "Select the group you would like to report:"
 msgstr ""
@@ -7846,10 +7511,6 @@ msgstr ""
 msgid "Print Report"
 msgstr ""
 
-#: ManageEnvelopes.php:154 PledgeEditor.php:568
-msgid "Envelope #"
-msgstr ""
-
 #: MemberRoleChange.php:83
 msgid "Group Name:"
 msgstr ""
@@ -7864,10 +7525,6 @@ msgstr ""
 
 #: MemberRoleChange.php:95
 msgid "New Role:"
-msgstr ""
-
-#: Menu.php:31
-msgid "Welcome to ChurchCRM"
 msgstr ""
 
 #: Menu.php:36
@@ -8076,7 +7733,7 @@ msgid "(Person will be assigned to the Group in the Default Role.)"
 msgstr ""
 
 #: PersonView.php:737
-msgid "Volunteer opportunities:"
+msgid "Volunteer Opportunities:"
 msgstr ""
 
 #: PersonView.php:788
@@ -8085,10 +7742,6 @@ msgstr ""
 
 #: PersonView.php:868
 msgid "Edit Why Came Notes"
-msgstr ""
-
-#: PledgeEditor.php:317
-msgid "Check number not valid for CASH payment"
 msgstr ""
 
 #: PropertyAssign.php:182
@@ -8168,14 +7821,6 @@ msgstr ""
 msgid "Printable Record"
 msgstr ""
 
-#: SelectList.php:1163 SelectListFormatted.php:1217
-msgid "Primary E-mail"
-msgstr ""
-
-#: SelectList.php:1164 SelectListFormatted.php:1220
-msgid "Work / Other E-mail"
-msgstr ""
-
 #: SelectList.php:1165 SelectListFormatted.php:1223
 msgid "Date Entered"
 msgstr ""
@@ -8190,10 +7835,6 @@ msgstr ""
 
 #: SettingsGeneral.php:93
 msgid "General Configuration Settings"
-msgstr ""
-
-#: SundaySchool.php:126
-msgid "Select Group: To select multiple hold CTL"
 msgstr ""
 
 #: SundaySchool.php:150
@@ -8310,10 +7951,6 @@ msgstr ""
 msgid "years old"
 msgstr ""
 
-#: Include/Header-function.php:442
-msgid "Search"
-msgstr ""
-
 #: Include/Header-function.php:447
 msgid "Current deposit slip"
 msgstr ""
@@ -8368,30 +8005,12 @@ msgstr ""
 msgid "item"
 msgstr ""
 
-#: Reports/ConfirmReport.php:112
-msgid "Family name"
-msgstr ""
-
-#: Reports/ConfirmReport.php:128
-msgid "Home phone"
-msgstr ""
-
 #: Reports/PrintDeposit.php:345
 msgid "UNDESIGNATED"
 msgstr ""
 
 #: Reports/TaxReport.php:200
 msgid "Fiscal Year "
-msgstr ""
-
-#: CanvassAutomation.php:126
-msgid "Randomly assign canvassers to all Families.  The Canvassers are \n"
-"\t\t\ttaken from the &quot;Canvassers&quot; Group."
-msgstr ""
-
-#: CanvassAutomation.php:138
-msgid "Randomly assign canvassers to non-pledging Families.  The Canvassers are \n"
-"\t\t\ttaken from the &quot;BraveCanvassers&quot; Group."
 msgstr ""
 
 #: CanvassAutomation.php:196
@@ -8407,12 +8026,6 @@ msgstr ""
 #: CanvassAutomation.php:218
 msgid "Generate a PDF containing a report of the families marked &quot;Not Interested&quot; \n"
 "\t\t\t                    by the canvasser."
-msgstr ""
-
-#: FinancialReports.php:285
-msgid "Voting members must have made<br>\n"
-"\t\t\ta donation within this many years<br>\n"
-"\t\t\t(0 to not require a donation):"
 msgstr ""
 
 #: SundaySchool.php:126
