--- a/src/locale/en_GB/LC_MESSAGES/messages.po
+++ b/src/locale/en_GB/LC_MESSAGES/messages.po
@@ -427,14 +427,6 @@ msgstr ""
 msgid "Donation Envelope"
 msgstr ""
 
-#: CSVImport.php:228
-msgid "Address1"
-msgstr ""
-
-#: CSVImport.php:229
-msgid "Address2"
-msgstr ""
-
 #: CSVImport.php:234 EditEventAttendees.php:54 EventAttendance.php:204
 #: GroupMemberList.php:323 GroupReports.php:159 SelectList.php:1160
 #: SelectListFormatted.php:1208
@@ -636,10 +628,6 @@ msgstr ""
 
 #: CanvassAutomation.php:206
 msgid "Turn on the &quot;Ok To Canvass&quot; field for all Families."
-msgstr ""
-
-#: CanvassAutomation.php:206 CanvassAutomation.php:217
-msgid "Important note: this will lose any &quot;Ok To Canvass&quot; fields that have been set by hand."
 msgstr ""
 
 #: CanvassAutomation.php:170
@@ -949,14 +937,6 @@ msgstr ""
 msgid "persons from"
 msgstr ""
 
-#: CartView.php:185
-msgid "families."
-msgstr ""
-
-#: CartView.php:191
-msgid "Email?"
-msgstr ""
-
 #: CartView.php:192 CartView.php:243 FamilyView.php:467 FamilyView.php:516
 #: GroupView.php:251 GroupView.php:299 PersonView.php:521 PersonView.php:568
 #: PersonView.php:641 PersonView.php:667 PersonView.php:758 PersonView.php:774
@@ -1075,10 +1055,6 @@ msgstr ""
 #: AddEvent.php:134 Checkin.php:371 EditEventAttendees.php:55
 #: EventNames.php:197 ListEvents.php:228
 msgid "Action"
-msgstr ""
-
-#: Checkin.php:441
-msgid "Checkout"
 msgstr ""
 
 #: Checkin.php:450 EditEventAttendees.php:97
@@ -1358,20 +1334,6 @@ msgstr ""
 #: AddEvent.php:133 DonationFundEditor.php:199 ListEvents.php:227
 #: MenuSetup.php:79
 msgid "Active"
-msgstr ""
-
-#: AddEvent.php:220 AddEvent.php:227 DonationFundEditor.php:218
-#: DonationFundEditor.php:259 FamilyCustomFieldsEditor.php:388
-#: FamilyCustomFieldsEditorSave.php:384 GroupEditor.php:249
-#: GroupPropsFormEditor.php:344 GroupPropsFormEditor.php:426
-#: OptionManager.php:367 OptionManagerSave.php:364
-#: PersonCustomFieldsEditor.php:368 VolunteerOpportunityEditor.php:382
-#: VolunteerOpportunityEditor.php:423
-msgid "You must enter a name."
-msgstr ""
-
-#: DonationFundEditor.php:211
-msgid "delete"
 msgstr ""
 
 #: DonationFundEditor.php:188 DonationFundEditor.php:239 EventEditor.php:534
@@ -1857,10 +1819,6 @@ msgstr ""
 
 #: FamilyEditor.php:223 PersonEditor.php:196
 msgid "Invalid Birth Date."
-msgstr ""
-
-#: FamilyEditor.php:233
-msgid "You must enter a Name."
 msgstr ""
 
 #: FamilyEditor.php:243
@@ -2454,10 +2412,6 @@ msgstr ""
 msgid "Deposit Report"
 msgstr ""
 
-#: FinancialReports.php:300
-msgid "PDF"
-msgstr ""
-
 #: FinancialReports.php:301
 msgid "CSV"
 msgstr ""
@@ -2542,17 +2496,8 @@ msgstr ""
 msgid "Number"
 msgstr ""
 
-#: FundRaiserEditor.php:33
-msgid "Fund Raiser #"
-msgstr ""
-
 #: FundRaiserEditor.php:35
 msgid "Create New Fund Raiser"
-msgstr ""
-
-#: DepositSlipEditor.php:78 FundRaiserEditor.php:57 GroupMeeting.php:45
-#: PledgeEditor.php:333
-msgid "Not a valid Date"
 msgstr ""
 
 #: FundRaiserEditor.php:160
@@ -2585,10 +2530,6 @@ msgstr ""
 
 #: FundRaiserEditor.php:205
 msgid "Sale Price"
-msgstr ""
-
-#: FundRaiserEditor.php:206
-msgid "Est Value"
 msgstr ""
 
 #: FundRaiserEditor.php:207
@@ -2822,10 +2763,6 @@ msgstr ""
 msgid "Group-Specific Properties Form Editor:"
 msgstr ""
 
-#: GroupPropsFormEditor.php:187
-msgid "'Default Option'"
-msgstr ""
-
 #: GroupPropsFormEditor.php:284
 msgid "No properties have been added yet"
 msgstr ""
@@ -2876,11 +2813,6 @@ msgstr ""
 
 #: GroupReports.php:130
 msgid "Standard Info"
-msgstr ""
-
-#: GroupReports.php:161 SelectList.php:1162 SelectListFormatted.php:1214
-#: Reports/CanvassReports.php:262
-msgid "Cell Phone"
 msgstr ""
 
 #: GroupReports.php:163 Reports/GroupReport.php:280
@@ -3076,7 +3008,7 @@ msgid "No Attendance Recorded"
 msgstr ""
 
 #: ListEvents.php:299
-msgid "Attendees("
+msgid "Attendees"
 msgstr ""
 
 #: ListEvents.php:329
@@ -3089,10 +3021,6 @@ msgstr ""
 
 #: Login.php:153
 msgid "Too many failed logins: your account has been locked.  Please contact an administrator."
-msgstr ""
-
-#: Login.php:276
-msgid "ChurchCRM - Login"
 msgstr ""
 
 #: Login.php:393
@@ -3125,10 +3053,6 @@ msgstr ""
 
 #: ManageEnvelopes.php:118
 msgid "Confirm"
-msgstr ""
-
-#: ManageEnvelopes.php:141
-msgid "All"
 msgstr ""
 
 #: ManageEnvelopes.php:150
@@ -3295,10 +3219,6 @@ msgstr ""
 msgid "Girls"
 msgstr ""
 
-#: Menu.php:56
-msgid "Welcome to <b>Church</b>CRM"
-msgstr ""
-
 #: sundayschool/SundaySchoolDashboard.php:132 Menu.php:108
 msgid "Sunday School Classes"
 msgstr ""
@@ -3442,10 +3362,6 @@ msgstr ""
 
 #: MenuManager.php:266 OptionManager.php:389 OptionManagerSave.php:386
 msgid "Add New"
-msgstr ""
-
-#: OptionManager.php:395 OptionManagerSave.php:392
-msgid "Error: You must enter a name."
 msgstr ""
 
 #: OptionManager.php:397 OptionManagerSave.php:394
@@ -3752,25 +3668,9 @@ msgstr ""
 msgid "Payment by"
 msgstr ""
 
-#: PledgeEditor.php:597
-msgid "CHECK"
-msgstr "Cheque"
-
-#: PledgeEditor.php:598
-msgid "CASH"
-msgstr ""
-
 #: PledgeEditor.php:624
 msgid "Split"
 msgstr ""
-
-#: DepositSlipEditor.php:577 PledgeEditor.php:668
-msgid "Check #"
-msgstr ""
-
-#: PledgeEditor.php:685
-msgid "Total $"
-msgstr "Total"
 
 #: PledgeEditor.php:691
 msgid "Split to Funds by pledge"
@@ -3880,12 +3780,8 @@ msgstr ""
 msgid "Property Editor"
 msgstr ""
 
-#: PropertyEditor.php:75
-msgid "You must enter a Name"
-msgstr ""
-
 #: PropertyEditor.php:82
-msgid "You must select a Type"
+msgid "You must select a type"
 msgstr ""
 
 #: PropertyEditor.php:147
@@ -3894,10 +3790,6 @@ msgstr ""
 
 #: PropertyEditor.php:170 PropertyList.php:63
 msgid "A"
-msgstr ""
-
-#: PropertyEditor.php:170
-msgid "with this property.."
 msgstr ""
 
 #: PropertyEditor.php:178
@@ -3914,10 +3806,6 @@ msgstr ""
 
 #: GroupMemberList.php:410 PersonView.php:693 PropertyList.php:56
 msgid "Property"
-msgstr ""
-
-#: PropertyList.php:63
-msgid "with this Property..."
 msgstr ""
 
 #: PropertyList.php:64
@@ -4177,10 +4065,6 @@ msgstr ""
 msgid "Delete Family Record AND Family Members"
 msgstr ""
 
-#: SelectDelete.php:389
-msgid "No, cancel this deletion</a>"
-msgstr ""
-
 #: SelectList.php:149 SelectListFormatted.php:145
 msgid "Person Listing"
 msgstr ""
@@ -4275,10 +4159,6 @@ msgstr ""
 msgid "Print"
 msgstr ""
 
-#: SelectList.php:1085 SelectListFormatted.php:1128
-msgid "unassigned"
-msgstr ""
-
 #: SettingsIndividual.php:93
 msgid "My User Settings"
 msgstr ""
@@ -4357,16 +4237,6 @@ msgstr ""
 
 #: USISTAddressVerification.php:276
 msgid "US Address Verification"
-msgstr ""
-
-#: USISTAddressVerification.php:310 USISTAddressVerification.php:327
-#: USISTAddressVerification.php:351 USISTAddressVerification.php:593
-#: USISTAddressVerification.php:605
-msgid "https://www.intelligentsearch.com/Hosted/User/"
-msgstr ""
-
-#: USISTAddressVerification.php:339
-msgid "http://www.intelligentsearch.com/address_verification/verify_address.html"
 msgstr ""
 
 #: UpdateAllLatLon.php:30
@@ -4579,10 +4449,6 @@ msgstr ""
 
 #: VolunteerOpportunityEditor.php:78
 msgid "Volunteer Opportunity Delete Confirmation"
-msgstr ""
-
-#: VolunteerOpportunityEditor.php:101
-msgid "Warning!"
 msgstr ""
 
 #: VolunteerOpportunityEditor.php:102
@@ -5066,10 +4932,6 @@ msgstr ""
 msgid "Anniversary Date"
 msgstr ""
 
-#: Reports/ConfirmReport.php:147
-msgid "Family E-Mail"
-msgstr ""
-
 #: Reports/ConfirmReport.php:170 Reports/ConfirmReport.php:189
 msgid "Member Name"
 msgstr ""
@@ -5079,7 +4941,8 @@ msgid "Adult/Child"
 msgstr ""
 
 #: Reports/ConfirmReport.php:175 Reports/ConfirmReport.php:194
-msgid "Cell phone"
+#, fuzzy
+msgid "Cell Phone"
 msgstr "Mobile Phone"
 
 #: Reports/ConfirmReport.php:176 Reports/ConfirmReport.php:195
@@ -5211,10 +5074,6 @@ msgstr ""
 
 #: Reports/TaxReport.php:271
 msgid "Gift Designation:"
-msgstr ""
-
-#: Reports/VotingMembers.php:53
-msgid "Voting members "
 msgstr ""
 
 #: sundayschool/SundaySchoolClassView.php:36
@@ -5694,10 +5553,6 @@ msgstr ""
 msgid "Extract the upgrade archive, and apply the new files"
 msgstr ""
 
-#: UpgradeCRM.php:56
-msgid "File Name:"
-msgstr ""
-
 #: UpgradeCRM.php:57
 msgid "Full Path:"
 msgstr ""
@@ -5752,10 +5607,6 @@ msgstr ""
 
 #: email/Dashboard.php:68
 msgid "Cleaned count since last send:"
-msgstr ""
-
-#: email/Dashboard.php:80
-msgid "MailChimp"
 msgstr ""
 
 #: email/Dashboard.php:84
@@ -6461,27 +6312,7 @@ msgstr ""
 
 #: 
 msgctxt "menuconfig_mcf"
-msgid "Members"
-msgstr ""
-
-#: 
-msgctxt "menuconfig_mcf"
-msgid "View All Persons"
-msgstr ""
-
-#: 
-msgctxt "menuconfig_mcf"
-msgid "View All Families"
-msgstr ""
-
-#: 
-msgctxt "menuconfig_mcf"
 msgid "Groups"
-msgstr ""
-
-#: 
-msgctxt "menuconfig_mcf"
-msgid "Group Assignment Helper"
 msgstr ""
 
 #: 
@@ -6492,11 +6323,6 @@ msgstr ""
 #: 
 msgctxt "menuconfig_mcf"
 msgid "List Event Types"
-msgstr ""
-
-#: 
-msgctxt "menuconfig_mcf"
-msgid "Deposit"
 msgstr ""
 
 #: 
@@ -6512,11 +6338,6 @@ msgstr ""
 #: 
 msgctxt "menuconfig_mcf"
 msgid "Edit Deposit Slip"
-msgstr ""
-
-#: 
-msgctxt "menuconfig_mcf"
-msgid "Fundraiser"
 msgstr ""
 
 #: 
@@ -6561,52 +6382,12 @@ msgstr ""
 
 #: 
 msgctxt "menuconfig_mcf"
-msgid "System Users"
-msgstr ""
-
-#: 
-msgctxt "menuconfig_mcf"
 msgid "Edit Custom Family Fields"
 msgstr ""
 
 #: 
 msgctxt "menuconfig_mcf"
 msgid "Edit Custom Person Fields"
-msgstr ""
-
-#: 
-msgctxt "menuconfig_mcf"
-msgid "Restore Database"
-msgstr ""
-
-#: 
-msgctxt "menuconfig_mcf"
-msgid "Generate Seed Data"
-msgstr ""
-
-#: 
-msgctxt "queryparameteroptions_qpo"
-msgid "Male"
-msgstr ""
-
-#: 
-msgctxt "queryparameteroptions_qpo"
-msgid "Female"
-msgstr ""
-
-#: 
-msgctxt "queryparameteroptions_qpo"
-msgid "Zip Code"
-msgstr ""
-
-#: 
-msgctxt "queryparameteroptions_qpo"
-msgid "WorkEmail"
-msgstr ""
-
-#: 
-msgctxt "queryparameteroptions_qpo"
-msgid "Member"
 msgstr ""
 
 #: 
@@ -6627,11 +6408,6 @@ msgstr ""
 #: 
 msgctxt "queryparameteroptions_qpo"
 msgid "Non-Attender (staff)"
-msgstr ""
-
-#: 
-msgctxt "queryparameters_qrp"
-msgid "Registered students"
 msgstr ""
 
 #: 
@@ -6662,16 +6438,6 @@ msgstr ""
 #: 
 msgctxt "queryparameters_qrp"
 msgid "Field"
-msgstr ""
-
-#: 
-msgctxt "queryparameters_qrp"
-msgid "Month"
-msgstr ""
-
-#: 
-msgctxt "queryparameters_qrp"
-msgid "Volunteer opportunities"
 msgstr ""
 
 #: 
@@ -6876,10 +6642,6 @@ msgstr ""
 msgid "support docs."
 msgstr ""
 
-#: MenuSetup.php:81
-msgid "Inactive"
-msgstr ""
-
 #: EventNames.php:210
 msgid "Yearly"
 msgstr ""
@@ -6962,10 +6724,6 @@ msgstr ""
 
 #: Register.php:32
 msgid "Admin->Edit General Settings"
-msgstr ""
-
-#: Register.php:53
-msgid "ChurchCRM URL"
 msgstr ""
 
 #: Register.php:54
@@ -7070,18 +6828,6 @@ msgstr ""
 msgid "Fiscal Year:"
 msgstr ""
 
-#: AutoPaymentEditor.php:362
-msgid "First name"
-msgstr ""
-
-#: AutoPaymentEditor.php:367
-msgid "Last name"
-msgstr ""
-
-#: AutoPaymentEditor.php:392
-msgid "Zip code"
-msgstr ""
-
 #: BackupDatabase.php:50
 msgid "Password values entered were not the same! Please re-type them."
 msgstr ""
@@ -7090,16 +6836,8 @@ msgstr ""
 msgid "You must enter a password of at least 8 characters to encrypt this backup."
 msgstr ""
 
-#: BackupDatabase.php:120
-msgid "This tool will assist you in manually backing up the InfoCentral database."
-msgstr ""
-
 #: BackupDatabase.php:122
 msgid "TIPS:"
-msgstr ""
-
-#: BackupDatabase.php:126
-msgid "If you are concerned about confidentiality of data stored in the InfoCentral database, you should encrypt the backup data if it will be stored somewhere potentially accessible to others"
 msgstr ""
 
 #: BackupDatabase.php:131
@@ -7121,16 +6859,6 @@ msgstr ""
 #: CanvassAutomation.php:150
 msgid "Clear all the canvasser assignments for all families.  <p>Important\n"
 "\t\t\tnote: this will lose any canvasser assignments that have been made by hand.</p>"
-msgstr ""
-
-#: CanvassAutomation.php:162
-msgid "Turn on the &quot;Ok To Canvass&quot; field for all Families.  <p>Important\n"
-"\t\t\tnote: this will lose any &quot;Ok To Canvass&quot; fields that have been set by hand.</p>"
-msgstr ""
-
-#: CanvassAutomation.php:174
-msgid "Turn off the &quot;Ok To Canvass&quot; field for all Families.  <p>Important\n"
-"\t\t\tnote: this will lose any &quot;Ok To Canvass&quot; fields that have been set by hand.</p>"
 msgstr ""
 
 #: CanvassEditor.php:162 UserEditor.php:424
@@ -7170,11 +6898,6 @@ msgstr ""
 
 #: CartToFamily.php:269 FamilyEditor.php:720
 msgid "Postal Code:"
-msgstr ""
-
-#: CartToFamily.php:271 CSVExport.php:129 FamilyEditor.php:722
-#: PersonEditor.php:688
-msgid "Zip:"
 msgstr ""
 
 #: CartToFamily.php:281 CSVExport.php:139 FamilyEditor.php:739
@@ -7397,10 +7120,6 @@ msgstr ""
 msgid "Final Price:"
 msgstr ""
 
-#: DonationFundEditor.php:176
-msgid "Warning: Field changes will be lost if you do not Save Changes before using a delete or add new button!"
-msgstr ""
-
 #: DonationFundEditor.php:257 FamilyCustomFieldsEditor.php:473
 #: FamilyCustomFieldsEditorSave.php:469 GroupEditor.php:247
 #: GroupPropsFormEditor.php:423 MenuManager.php:261 OptionManager.php:384
@@ -7420,14 +7139,6 @@ msgstr ""
 msgid "Are you sure you want to delete this event?"
 msgstr ""
 
-#: EditEventTypes.php:192
-msgid "DELETE"
-msgstr ""
-
-#: EditEventTypes.php:208
-msgid "ADD"
-msgstr ""
-
 #: eGive.php:295
 msgid "Start Date: "
 msgstr ""
@@ -7436,28 +7147,12 @@ msgstr ""
 msgid "End Date: "
 msgstr ""
 
-#: EventAttendance.php:70
-msgid " Events"
-msgstr ""
-
 #: EventEditor.php:59 EventNames.php:283
 msgid "Create=>Event"
 msgstr ""
 
 #: EventEditor.php:400
 msgid "Editing Event ID: (ID will be created once saved)"
-msgstr ""
-
-#: EventNames.php:258
-msgid "DEFAULT"
-msgstr ""
-
-#: EventNames.php:258
-msgid "START TIME"
-msgstr ""
-
-#: EventNames.php:266
-msgid "Total,"
 msgstr ""
 
 #: EventNames.php:266
@@ -7481,10 +7176,6 @@ msgstr ""
 #: FamilyCustomFieldsEditor.php:486 FamilyCustomFieldsEditorSave.php:482
 #: PersonCustomFieldsEditor.php:465
 msgid "Side:"
-msgstr ""
-
-#: FamilyEditor.php:779
-msgid "Send Newsletter:"
 msgstr ""
 
 #: FamilyEditor.php:785
@@ -7539,20 +7230,12 @@ msgstr ""
 msgid "General Information:"
 msgstr ""
 
-#: FamilyView.php:402
-msgid "Send newsletter:"
-msgstr ""
-
 #: FamilyView.php:443 GroupView.php:228 PersonView.php:498 PrintView.php:411
 msgid "Assigned Properties:"
 msgstr ""
 
 #: FamilyView.php:535 GroupView.php:321 PersonView.php:585
 msgid "Assign a New Property:"
-msgstr ""
-
-#: FamilyView.php:577 PersonView.php:853
-msgid "Last edited:"
 msgstr ""
 
 #: FamilyView.php:582 PrintView.php:291 SelectDelete.php:378
@@ -7581,10 +7264,6 @@ msgstr ""
 
 #: FinancialReports.php:132
 msgid "Filter by Family:"
-msgstr ""
-
-#: FinancialReports.php:285
-msgid "Voting members must have made a donation within this many years to not require a donation):"
 msgstr ""
 
 #: FindDepositSlip.php:79 FindFundRaiser.php:71 PaddleNumEditor.php:177
@@ -7641,10 +7320,6 @@ msgstr ""
 
 #: GroupEditor.php:286
 msgid "from group:"
-msgstr ""
-
-#: GroupEditor.php:303
-msgid "Group-Specific<br>Properties:"
 msgstr ""
 
 #: GroupEditor.php:305
@@ -7711,18 +7386,6 @@ msgstr ""
 msgid "Group Role"
 msgstr ""
 
-#: GroupMemberList.php:322
-msgid "ZIP"
-msgstr ""
-
-#: GroupMemberList.php:324
-msgid "E-mail"
-msgstr ""
-
-#: GroupPropsFormEditor.php:293
-msgid "Warning: Field changes will be lost if you do not Save Changes before using an up, down, delete, or add new button!"
-msgstr ""
-
 #: GroupReports.php:92
 msgid "Select the group you would like to report:"
 msgstr ""
@@ -7743,10 +7406,6 @@ msgstr ""
 msgid "Print Report"
 msgstr ""
 
-#: ManageEnvelopes.php:154 PledgeEditor.php:568
-msgid "Envelope #"
-msgstr ""
-
 #: MemberRoleChange.php:83
 msgid "Group Name:"
 msgstr ""
@@ -7761,10 +7420,6 @@ msgstr ""
 
 #: MemberRoleChange.php:95
 msgid "New Role:"
-msgstr ""
-
-#: Menu.php:31
-msgid "Welcome to ChurchCRM"
 msgstr ""
 
 #: Menu.php:36
@@ -7973,7 +7628,7 @@ msgid "(Person will be assigned to the Group in the Default Role.)"
 msgstr ""
 
 #: PersonView.php:737
-msgid "Volunteer opportunities:"
+msgid "Volunteer Opportunities:"
 msgstr ""
 
 #: PersonView.php:788
@@ -7982,10 +7637,6 @@ msgstr ""
 
 #: PersonView.php:868
 msgid "Edit Why Came Notes"
-msgstr ""
-
-#: PledgeEditor.php:317
-msgid "Check number not valid for CASH payment"
 msgstr ""
 
 #: PropertyAssign.php:182
@@ -8065,14 +7716,6 @@ msgstr ""
 msgid "Printable Record"
 msgstr ""
 
-#: SelectList.php:1163 SelectListFormatted.php:1217
-msgid "Primary E-mail"
-msgstr ""
-
-#: SelectList.php:1164 SelectListFormatted.php:1220
-msgid "Work / Other E-mail"
-msgstr ""
-
 #: SelectList.php:1165 SelectListFormatted.php:1223
 msgid "Date Entered"
 msgstr ""
@@ -8087,10 +7730,6 @@ msgstr ""
 
 #: SettingsGeneral.php:93
 msgid "General Configuration Settings"
-msgstr ""
-
-#: SundaySchool.php:126
-msgid "Select Group: To select multiple hold CTL"
 msgstr ""
 
 #: SundaySchool.php:150
@@ -8207,10 +7846,6 @@ msgstr ""
 msgid "years old"
 msgstr ""
 
-#: Include/Header-function.php:442
-msgid "Search"
-msgstr ""
-
 #: Include/Header-function.php:447
 msgid "Current deposit slip"
 msgstr ""
@@ -8265,30 +7900,12 @@ msgstr ""
 msgid "item"
 msgstr ""
 
-#: Reports/ConfirmReport.php:112
-msgid "Family name"
-msgstr ""
-
-#: Reports/ConfirmReport.php:128
-msgid "Home phone"
-msgstr ""
-
 #: Reports/PrintDeposit.php:345
 msgid "UNDESIGNATED"
 msgstr ""
 
 #: Reports/TaxReport.php:200
 msgid "Fiscal Year "
-msgstr ""
-
-#: CanvassAutomation.php:126
-msgid "Randomly assign canvassers to all Families.  The Canvassers are \n"
-"\t\t\ttaken from the &quot;Canvassers&quot; Group."
-msgstr ""
-
-#: CanvassAutomation.php:138
-msgid "Randomly assign canvassers to non-pledging Families.  The Canvassers are \n"
-"\t\t\ttaken from the &quot;BraveCanvassers&quot; Group."
 msgstr ""
 
 #: CanvassAutomation.php:196
@@ -8304,12 +7921,6 @@ msgstr ""
 #: CanvassAutomation.php:218
 msgid "Generate a PDF containing a report of the families marked &quot;Not Interested&quot; \n"
 "\t\t\t                    by the canvasser."
-msgstr ""
-
-#: FinancialReports.php:285
-msgid "Voting members must have made<br>\n"
-"\t\t\ta donation within this many years<br>\n"
-"\t\t\t(0 to not require a donation):"
 msgstr ""
 
 #: SundaySchool.php:126
